Fix wrong padding for adding reviews
I unintentionally added different padding to a few different classes in
9fae504. As the facet area actually looks better with the standard
padding of side_categories, I just removed the line.

Fixes #1464.

--- a/oscar/static/oscar/less/page/product_page.less
+++ b/oscar/static/oscar/less/page/product_page.less
@@ -27,7 +27,6 @@
 .review_read,
 .side_categories {
     .well();
-    padding: 8px 0;
 }
 
 // Wish lists
